# WISDAMcore

./: README.md  code_of_conduct.md  pyproject.toml  readme.md
src/WISDAMcore/: __init__.py  cfg.py  exceptions.py  utils.py
src/WISDAMcore/camera/: base_perspective.py  model_selector.py  opencv_perspective.py
src/WISDAMcore/geometry/: intersection_plane.py
src/WISDAMcore/image/: __init__.py  base_class.py  ortho.py  perspective.py  type_selector.py
src/WISDAMcore/mapping/: __init__.py  base_class.py  georef_array.py  plane.py  raster.py  type_selector.py
src/WISDAMcore/metadata/: camera_alternative_tags.py  camera_database.py  camera_estimator_metadata.py
src/WISDAMcore/transform/: coordinates.py  coordinates_new.py  rotation.py  utm_converter.py
tests/: test_cameraBasePerspective.py  test_cameraOpenCVPerspective.py  test_coordinates.py  test_imagePerspective.py  test_mappingPlane.py  test_raster.py  test_utm_converter.py
tests/data/: dhm_at_lamb_10m_2018.tif
